#378: Able to run `mvn verify again` but at the cost of breaking JaCoCo.